# ProtAnnoScripts

./: LICENSE  README.md  pyproject.toml
data/: enzyme_family_keywords.json  tcdb_fams.tab  tcdb_substrates.tab
src/: parse_localization.py
src/functional/: blast_swissprot.py  blastp_swissprot.py  interproscan.py  unifire.py
src/localization/: deeploc2.py  deeptmhmm.py  netgpi.py  signalp6.py
src/protannoscripts/: blast_swissprot.py  classify_enzyme_families.py  deeploc2.py  deeptmhmm.py  interproscan.py  kobas.py  netgpi.py  parse_localization.py  parse_protein_fasta.py  signalp6.py  tcdb.py  tmhmm.py  unifire.py
